# prodforge

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  SCROLLING_FIX.md  index.html  package-lock.json  package.json  start-dev.sh  tailwind.config.js
.github/workflows/: build-release.yml
python-sidecar/: agent_engine.py  anthropic_client.py  google_client.py  main.py  ollama_client.py  openai_client.py  prodforge-sidecar.spec  requirements.txt  runtime_hook_ssl.py  scheduler.py  ssl_helper.py  team_engine.py  tracing_layer.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs  sidecar.rs
src/components/: ActivityBar.tsx  AgentEditor.tsx  AgentRunProvider.tsx  AgentRunner.tsx  AnalyticsDashboard.tsx  BatchExportDialog.tsx  BatchImportDialog.tsx  BottomPanel.tsx  CategoryManager.tsx  ChatInterface.tsx  ClaudeChat.tsx  CommandPalette.tsx  ConversationHistory.tsx  CopyButton.tsx  ExportToJiraDialog.tsx  ExportToNotionDialog.tsx  FocusMode.tsx  FrameworkCustomizer.tsx  FrameworkGenerator.tsx  FrameworkManager.tsx  GitPanel.tsx  ImportPreviewDialog.tsx  InsightsPanel.tsx  LayoutBar.tsx  MarkdownEditor.tsx  MarkdownRenderer.tsx  ModelSelector.tsx  NodePropertiesPanel.tsx  ProdForgeIcon.tsx  PromptCategoryManager.tsx  PromptEditor.tsx  PromptEditorModal.tsx  PromptPickerModal.tsx  QuickSwitcher.tsx  RepoConnect.tsx  SectionRegenerator.tsx  SetupWizard.tsx  ShortcutOverlay.tsx  SkillEditorModal.tsx  SplitView.tsx  (+10 more)
(+27 files in other folders)
