[package]
name = "prodforge"
version = "1.0.0"
description = "ProdForge — AI-powered Product Management toolkit"
authors = ["Dimitris Sotiriou"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prodforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_yaml = "0.9"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
machine-uid = "0.5"
portable-pty = "0.8"
libc = "0.2"
